@@ -16,17 +16,7 @@
 
 package org.springframework.ldap.control;
 
-import java.lang.reflect.Constructor;
-import java.lang.reflect.Method;
-
-import javax.naming.NamingException;
-import javax.naming.directory.DirContext;
 import javax.naming.ldap.Control;
-import javax.naming.ldap.LdapContext;
-
-import org.springframework.ldap.UncategorizedLdapException;
-import org.springframework.util.ClassUtils;
-import org.springframework.util.ReflectionUtils;
 
 /**
  * DirContextProcessor implementation for managing the SortControl. Note that
@@ -35,22 +25,20 @@ import org.springframework.util.ReflectionUtils;
  * 
  * @author Ulrik Sandberg
  */
-public class SortControlDirContextProcessor extends AbstractRequestControlDirContextProcessor {
-
-	private static final boolean CRITICAL_CONTROL = true;
+public class SortControlDirContextProcessor extends AbstractFallbackRequestAndResponseControlDirContextProcessor {
 
 	private static final String DEFAULT_REQUEST_CONTROL = "javax.naming.ldap.SortControl";
 
-	private static final String LDAPBP_REQUEST_CONTROL = "com.sun.jndi.ldap.ctl.SortControl";
+	private static final String FALLBACK_REQUEST_CONTROL = "com.sun.jndi.ldap.ctl.SortControl";
 
 	private static final String DEFAULT_RESPONSE_CONTROL = "javax.naming.ldap.SortResponseControl";
 
-	private static final String LDAPBP_RESPONSE_CONTROL = "com.sun.jndi.ldap.ctl.SortResponseControl";
+	private static final String FALLBACK_RESPONSE_CONTROL = "com.sun.jndi.ldap.ctl.SortResponseControl";
 
 	/**
 	 * What key to sort on.
 	 */
-	private String sortKey;
+	String sortKey;
 
 	/**
 	 * Whether the search result actually was sorted.
@@ -62,12 +50,6 @@ public class SortControlDirContextProcessor extends AbstractRequestControlDirCon
 	 */
 	private int resultCode;
 
-	private Class responseControlClass;
-
-	private Class requestControlClass;
-
-	private boolean critical = CRITICAL_CONTROL;
-
 	/**
 	 * Constructs a new instance using the supplied sort key.
 	 * 
@@ -75,43 +57,16 @@ public class SortControlDirContextProcessor extends AbstractRequestControlDirCon
 	 */
 	public SortControlDirContextProcessor(String sortKey) {
 		this.sortKey = sortKey;
-		setSorted(false);
-		setResultCode(-1);
+		this.sorted = false;
+		this.resultCode = -1;
+
+		defaultRequestControl = DEFAULT_REQUEST_CONTROL;
+		defaultResponseControl = DEFAULT_RESPONSE_CONTROL;
+
+		fallbackRequestControl = FALLBACK_REQUEST_CONTROL;
+		fallbackResponseControl = FALLBACK_RESPONSE_CONTROL;
 
 		loadControlClasses();
-	}
-
-	private void loadControlClasses() {
-		try {
-			requestControlClass = Class.forName(DEFAULT_REQUEST_CONTROL);
-			responseControlClass = Class.forName(DEFAULT_RESPONSE_CONTROL);
-		}
-		catch (ClassNotFoundException e) {
-			log.debug("Default control classes not found - falling back to LdapBP classes", e);
-
-			try {
-				requestControlClass = Class.forName(LDAPBP_REQUEST_CONTROL);
-				responseControlClass = Class.forName(LDAPBP_RESPONSE_CONTROL);
-			}
-			catch (ClassNotFoundException e1) {
-				throw new UncategorizedLdapException(
-						"Neither default nor fallback classes are available - unable to proceed", e);
-			}
-		}
-	}
-
-	/**
-	 * Set the class of the expected ResponseControl for the sorted result
-	 * response.
-	 * 
-	 * @param responseControlClass Class of the expected response control.
-	 */
-	public void setResponseControlClass(Class responseControlClass) {
-		this.responseControlClass = responseControlClass;
-	}
-
-	public void setRequestControlClass(Class requestControlClass) {
-		this.requestControlClass = requestControlClass;
 	}
 
 	/**
@@ -124,10 +79,6 @@ public class SortControlDirContextProcessor extends AbstractRequestControlDirCon
 		return sorted;
 	}
 
-	private void setSorted(boolean sorted) {
-		this.sorted = sorted;
-	}
-
 	/**
 	 * Get the result code returned by the control.
 	 * 
@@ -135,10 +86,6 @@ public class SortControlDirContextProcessor extends AbstractRequestControlDirCon
 	 */
 	public int getResultCode() {
 		return resultCode;
-	}
-
-	private void setResultCode(int sortResult) {
-		this.resultCode = sortResult;
 	}
 
 	/**
@@ -150,72 +97,25 @@ public class SortControlDirContextProcessor extends AbstractRequestControlDirCon
 		return sortKey;
 	}
 
-	/**
-	 * Set the sort key, i.e. the attribute on which to sort on.
-	 * 
-	 * @param sortKey the sort key.
-	 */
-	public void setSortKey(String sortKey) {
-		this.sortKey = sortKey;
-	}
-
 	/*
 	 * @see
 	 * org.springframework.ldap.control.AbstractRequestControlDirContextProcessor
 	 * #createRequestControl()
 	 */
 	public Control createRequestControl() {
-		Constructor constructor = ClassUtils.getConstructorIfAvailable(requestControlClass, new Class[] {
-				String[].class, boolean.class });
-		if (constructor == null) {
-			throw new IllegalArgumentException("Failed to find an appropriate RequestControl constructor");
-		}
-
-		Control result = null;
-		try {
-			result = (Control) constructor.newInstance(new Object[] { new String[] { sortKey },
-					Boolean.valueOf(critical) });
-		}
-		catch (Exception e) {
-			ReflectionUtils.handleReflectionException(e);
-		}
-
-		return result;
+		return super.createRequestControl(new Class[] { String[].class, boolean.class }, new Object[] {
+				new String[] { sortKey }, Boolean.valueOf(critical) });
 	}
 
 	/*
-	 * @see
-	 * org.springframework.ldap.core.DirContextProcessor#postProcess(javax.naming
-	 * .directory.DirContext)
+	 * @see org.springframework.ldap.control.
+	 * AbstractFallbackRequestAndResponseControlDirContextProcessor
+	 * #handleResponse(java.lang.Object)
 	 */
-	public void postProcess(DirContext ctx) throws NamingException {
-
-		LdapContext ldapContext = (LdapContext) ctx;
-		Control[] responseControls = ldapContext.getResponseControls();
-		if (responseControls == null) {
-			responseControls = new Control[0];
-		}
-
-		// Go through response controls and get info, regardless of class
-		for (int i = 0; i < responseControls.length; i++) {
-			Control responseControl = responseControls[i];
-
-			// check for match, try fallback otherwise
-			if (responseControl.getClass().isAssignableFrom(responseControlClass)) {
-				Object control = responseControl;
-				Boolean result = (Boolean) invokeMethod("isSorted", responseControlClass, control);
-				setSorted(result.booleanValue());
-				Integer code = (Integer) invokeMethod("getResultCode", responseControlClass, control);
-				setResultCode(code.intValue());
-				return;
-			}
-		}
-
-		log.fatal("No matching response control found for paged results - looking for '" + responseControlClass);
-	}
-
-	private Object invokeMethod(String method, Class clazz, Object control) {
-		Method actualMethod = ReflectionUtils.findMethod(clazz, method);
-		return ReflectionUtils.invokeMethod(actualMethod, control);
+	protected void handleResponse(Object control) {
+		Boolean result = (Boolean) invokeMethod("isSorted", responseControlClass, control);
+		this.sorted = result.booleanValue();
+		Integer code = (Integer) invokeMethod("getResultCode", responseControlClass, control);
+		this.resultCode = code.intValue();
 	}
 }
